--- a/qml.qrc
+++ b/qml.qrc
@@ -16,5 +16,11 @@
         <file>MainPage.qml</file>
         <file>SettingsPage.qml</file>
         <file>Debug.qml</file>
+        <file>htmlGrab.js</file>
+        <file>querys/originalGET.json</file>
+        <file>querys/query1.json</file>
+        <file>querys/query2.json</file>
+        <file>querys/query3.json</file>
+        <file>querys/query4.json</file>
     </qresource>
 </RCC>
